fix HTML validation and accessibility from frontend mentor

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
         <div class="box__storage-wrapper">
           <div class="box box__storage box--darkBlue">
-            <p class="data__info">
+            <h1 class="data__info">
               You’ve used <span>815 GB</span> of your storage
-            </p>
+            </h1>
             <div class="bar bar--margin">
               <div class="bar bar--inside">
                 <div class="bar__circle"></div>
